// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui reducer default 1`] = `
Object {
  "userOrders": Array [],
}
`;

exports[`ui reducer subscribe 1`] = `
Object {
  "subscribe": undefined,
  "userOrders": Array [],
}
`;
